fix: team modal scroll, loader translation, change form z-index

--- a/src/css/components/form.css
+++ b/src/css/components/form.css
@@ -5,7 +5,7 @@
   width: 100vw;
   height: 100vh;
 
-  z-index: 1001;
+  z-index: -1;
   backdrop-filter: blur(8px);
   background-color: var(--background-color);
 
@@ -19,6 +19,7 @@
 }
 
 .consultation-modal.visible {
+  z-index: 1001;
   opacity: 1;
   pointer-events: all;
 }
@@ -30,12 +31,15 @@
   overflow-y: auto;
   padding: 0 10px;
 }
+
 .visible .consultation-modal-wrapper {
   pointer-events: none;
 }
+
 .visible .consultation-modal-container {
   pointer-events: all;
 }
+
 .consultation-modal-container {
   position: relative;
   width: 100%;
@@ -53,6 +57,7 @@
     max-width: 630px;
     padding: 60px;
   }
+
   @media (width >=1440px) {
     max-width: 1085px;
     display: flex;
@@ -60,6 +65,7 @@
     gap: 20px;
   }
 }
+
 .consultation-modal-close {
   position: absolute;
   top: 20px;
@@ -69,6 +75,7 @@
   padding: 4.5px;
   background-color: transparent;
   border: none;
+
   @media (768px <=width) {
     width: 28px;
     height: 28px;
@@ -82,6 +89,7 @@
   width: 100%;
   height: 100%;
 }
+
 .consultation-modal-close span::before,
 .consultation-modal-close span::after {
   content: '';
@@ -96,6 +104,7 @@
 }
 
 @media (min-width: 768px) {
+
   .consultation-modal-close span::before,
   .consultation-modal-close span::after {
     width: 2.5px;
@@ -110,13 +119,16 @@
 .consultation-modal-close span::after {
   transform: translate(-50%, -50%) rotate(-45deg);
 }
+
 .consultation-modal-profile {
   display: none;
+
   @media (width >=1440px) {
     display: block;
     max-width: 450px;
   }
 }
+
 .consultation-modal-avatar {
   border-top-left-radius: 0;
   border-top-right-radius: 0;
@@ -126,6 +138,7 @@
 
   margin-bottom: 33px;
 }
+
 .avatar-wrapper {
   width: 450px;
   height: 450px;
@@ -153,17 +166,21 @@
   text-align: center;
   margin-bottom: 10px;
 }
+
 .consultation-profile-text {
   max-width: 311px;
   margin: 0 auto;
   text-align: center;
 }
+
 .consultation-modal-content {
   width: 100%;
+
   @media (width >=1440px) {
     max-width: 445px;
   }
 }
+
 .consultation-modal-title {
   font-size: 20px;
   line-height: 1.2;
@@ -216,6 +233,7 @@
   position: relative;
 
   margin-bottom: 14px;
+
   @media (768px <=width) {
     margin-bottom: 16px;
   }
@@ -250,16 +268,14 @@
   border-color: var(--error-color);
 }
 
-.modal-input.invalid + .modal-input-error {
+.modal-input.invalid+.modal-input-error {
   display: block;
   padding-left: 8px;
   opacity: 1;
 }
 
-.modal-input.invalid-length + .modal-input-error.length,
-.modal-input.invalid-phone
-  + .modal-input-error.length
-  + .modal-input-error.invalid {
+.modal-input.invalid-length+.modal-input-error.length,
+.modal-input.invalid-phone+.modal-input-error.length+.modal-input-error.invalid {
   display: block;
   padding-left: 8px;
   opacity: 1;
@@ -287,9 +303,11 @@
 
   transform: translateY(-50%);
 }
+
 .show-prefix .modal-label-name {
   display: block;
 }
+
 .show-prefix .modal-input-name {
   padding-left: 50px;
 }
@@ -322,6 +340,7 @@
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
+
   @media (768px <=width) {
     max-width: 450px;
   }
@@ -336,6 +355,7 @@
   height: 16px;
 
   transition: transform var(--transition-time) var(--transition-effect);
+
   @media (768px <=width) {
     width: 20px;
     height: 20px;
@@ -423,6 +443,7 @@
   background-color: var(--footer-bg);
 
   transition: background-color var(--transition-time) var(--transition-effect);
+
   @media (768px <=width) {
     font-size: 16px;
     line-height: 1.5;
