--- a/src/css/components/team-modal.css
+++ b/src/css/components/team-modal.css
@@ -1,6 +1,6 @@
 .team-modal-container {
   position: fixed;
-  z-index: 90;
+  z-index: -1;
   top: 0;
   left: 0;
   width: 100vw;
@@ -20,7 +20,7 @@
 
 .team-modal-container.visible {
   opacity: 1;
-
+  z-index: 1001;
   pointer-events: all;
   transition: opacity var(--transition-time),
     visibility 0s var(--transition-effect);
@@ -54,11 +54,13 @@
   border-radius: 15px;
   background-color: var(--white-color);
   box-shadow: 5px 5px 12px rgba(0, 0, 0, 0.22), 0 19px 60px rgba(0, 0, 0, 0.3);
+
   @media (768px <=width) {
     width: 736px;
     padding: 50px;
     max-height: 520px;
   }
+
   @media (width >=1440px) {
     width: 1342px;
     padding: 80px 50px;
@@ -67,7 +69,7 @@
 }
 
 .team-modal-close {
-position: absolute;
+  position: absolute;
   top: 20px;
   right: 20px;
   width: 18px;
@@ -82,6 +84,7 @@ position: absolute;
     padding: 7px;
   }
 }
+
 .team-modal-close span {
   position: relative;
   display: block;
@@ -100,15 +103,18 @@ position: absolute;
   height: 12.73px;
   border-radius: 1.25px;
   background-color: var(--primary-text-color-dark);
-  
+
 }
+
 @media (min-width: 768px) {
+
   .team-modal-close span::before,
   .team-modal-close span::after {
     width: 2.5px;
     height: 19.8px;
   }
 }
+
 .team-modal-close span::before {
   transform: translate(-50%, -50%) rotate(45deg);
 }
@@ -126,42 +132,46 @@ position: absolute;
   font-weight: 700;
   margin-bottom: 20px;
   margin-right: 36px;
+
   @media (768px <=width) {
     margin-bottom: 60px;
     font-size: 40px;
     line-height: 48px;
   }
 }
+
 .team-list {
   display: flex;
   flex-wrap: wrap;
   gap: 24px;
   height: 550px;
-  overflow-y: auto;
-  scrollbar-width: thin;
+  overflow-y: scroll;
+  scroll-behavior: smooth;
+
   @media (768px <=width) {
     height: 300px;
   }
 }
-.team-list::-webkit-scrollbar-track {
-  background-color: #e4e4e4;
-  border-radius: 10px;
+
+.team-list::-webkit-scrollbar-thumb {
+  border-radius: 50px;
+  border: 1px solid var(--white-color);
+  background-color: var(--scrollbar-thumb-bg);
+}
+
+.team-list::-webkit-scrollbar {
+  -webkit-appearance: none;
+  width: 10px !important;
 }
 
 .team-list::-webkit-scrollbar:horizontal {
   height: 13px;
 }
 
-.team-list::-webkit-scrollbar-thumb {
-  border-radius: 10px;
-  border: 1px solid #e4e4e4;
-  background-color: var(--scrollbar-thumb-bg);
-}
-
 .member-card {
   display: flex;
-  /* height: 50px; */
 }
+
 .member-card-ref {
   display: flex;
 }
@@ -171,6 +181,7 @@ position: absolute;
   width: 40px;
   height: 40px;
   margin-top: 4px;
+
   @media (768px <=width) {
     width: 80px;
     height: 80px;
@@ -185,12 +196,15 @@ position: absolute;
   background-color: var(--white-color);
   border-radius: 4px;
 }
+
 .linkedin-pic {
   border-radius: 4px;
 }
+
 .member-photo {
   display: block;
   border-radius: 50%;
+
   @media (768px <=width) {
     width: 100%;
   }
@@ -204,15 +218,18 @@ position: absolute;
   text-align: start;
   padding-left: 16px;
   min-width: 202px;
+
   @media (768px <=width) {
     font-size: 18px;
     line-height: 28px;
     padding: 12px 0 12px 16px;
   }
 }
+
 .member-name {
   color: var(--secondary-text-color-dark);
 }
+
 .member-position {
   color: var(--inactive-lang-text);
 }
